 - fix discontinuity (that sucks)
 - fix equations (solve them)
 - add polar functions
 - add inequalities
 - add random, lcm, gcd, nCr and nPr functions
 - add audio normalization
 - add audio current view



 CHANGELOG:

 Done (v1.6.1)
 - fixed bug with capital letters in custom functions
 - removed jQuery
 - fixed bug: changing audio line properties has no effect
 - fixed error icon color

 Done (v1.6)
 - added custom variables
 - added custom functions
 - separated expression and function generator ui
 - added audio playback for files
 - moved worker and calculation code from graph.ts to calculator.ts
 - fixed old play icon on audio settings page
 - changed audio line rendering
 - added variable sliders
 - fixed degrees
 - added export audio to WAV
 - added warning about audio clipping
 - fixed bug with infinite loop when removed line (and calculation was active)
 - fixed bugs with some margins
 - returned green borders on mobile devices
 - switched back to MathQuill (smaller, simpler)
 - fix error icon position
 - changed error system (removed warnings)
 - changed audio generation (gets generated on play, not on expression change)
 - fixed bugs with exceptions in workers
 - fixed bug with start and end input s > e
 - added syntax checks for functions and variables
 - fixed bugs with variables (removed, redefinition)
 - added full support for integrals and derivatives
 - added auto parenthesisation of functions with more than 1 argument
 - fixed graph vertical and xy inspecting
 - fixed equalities and equality sign bug
 
 Done (v1.5)
 - fixed bug with touch controls on Firefox
 - switched to Mathlive input library
 - sum and prod functions are now working with fancy symbols
 - fixed a lot of minor bugs in math parser
 - added all trigonometric and hyberbolic functions with fn^-1 support
 - added integrals (beta, works only in function notation int(x))

 Done (v1.4)
 - changed icon
 - fixed side panel animation
 - added localization
 - improved add button